--- a/src/sass/layout/_logo_bottom.scss
+++ b/src/sass/layout/_logo_bottom.scss
@@ -1,4 +1,5 @@
 .logo-bottom {
+  margin-top: 50px;
   .logo__company-name {
     margin-left: 15px;
     img {
