--- a/src/sass/layout/_section.scss
+++ b/src/sass/layout/_section.scss
@@ -1,4 +1,7 @@
 .section-default {
+  display: block;
+  width: 400px;
+  margin: 0 auto;
   margin-top: 51px;
   .section-header {
     color: #fff;
